deployment-prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: translatethread-ui-com
  namespace: tools
spec:
  type: ClusterIP
  selector:
    app: translatethread-ui-com
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
