deployment-prod/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: translatethread-ui-com
  namespace: tools
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: x.translatethread.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              serviceName: translatethread-ui-com
              servicePort: 80
  tls:
    - hosts:
        - x.translatethread.com
      secretName: x-translatethread-com
